--- a/InClassHTMLpractice.html
+++ b/InClassHTMLpractice.html
@@ -2,15 +2,15 @@
 <html>
 <head> 
 <meta charset="UTF-8">
-<title>Hello World!</title>
-<meta name="description" content=""My first web page">
+<title>Hello world</title>
+<meta name="description" content=""My website">
 <meta name="author" content="Kali Birdsall">
 </head> 
 <body>
-    <p> Paragraph of text</p>
-    <h2> Heading level 2 BIG TITLE</h2>
-    <a href="kalibirdsall.com">My website!</a>
-    
-The main content of the page goes here. 
+    <h2> Hello world </h2>
+    <p> This is my first web page <br> By Kali Birdsall</p>
+    <a href="https://www.kalibirdsall.com">My website!</a>
+
+<br>More content tbd
 </body> 
 </html>
