--- a/InClassHTMLpractice.html
+++ b/InClassHTMLpractice.html
@@ -9,8 +9,9 @@
 <body>
     <h2> Hello world </h2>
     <p> This is my first web page <br> By Kali Birdsall</p>
-    <a href="https://www.kalibirdsall.com">My website!</a>
+    <a>href="https://www.kalibirdsall.com">My website!</a>
 
 <br>More content tbd
 </body> 
 </html>
+
